# d-cubed

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yml  resources.puml  vcpkg-configuration.json  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: checklist.yml  ci.yml  coverage.yml
assets/shaders/: anomaly.frag  anomaly.vert  cube.frag  cube.vert  cube_geometry.frag  cube_geometry.vert  cube_lighting.frag  cube_lighting.vert  simple.frag.json  simple.frag.metallib  simple.vert.json  simple.vert.metallib  simple.vert.spv  test_geometry.frag  test_geometry.vert  test_lighting.frag  test_lighting.vert
assets/shaders/geometry/: geometry.vert
assets/shaders/msl/: anomaly.metal
assets/shaders/screen/: lighting.frag  screen.vert
scripts/: build.sh  check_format.sh  coverage.sh  format.sh  formatter.sh  lint.sh  pre-commit  setup_hooks.sh  shaders.sh  test.sh
shaders/: simple.frag  simple.vert
shaders/msl/: cube_metal_uniform.metal  cube_metal_uniform_lighting.metal  sky.metal  triangle.metal  triangle_buffer.metal  triangle_buffer_uniform.metal
shaders/spv/: simple.vert
src/: main.cpp
src/core/agents/: agent.h  agent_types.cpp
src/core/buildings/: buildings.h
src/core/items/: crafting.cpp  crafting.h  items.cpp  items.h  recipes.cpp  recipes.h  types.cpp  types.h
src/core/items/benchmarks/: benchmark_item_decays.cpp
src/core/world/: world.h  world_generator.cpp  world_generator.h  world_geometry.cpp  world_geometry.h
src/engine/: clock.h  engine.cpp  engine.h  inputs.cpp  inputs.h  memory.h  tasks.cpp  tasks.h  update.cpp  update.h  utils.h
src/engine/assets/: asset.cpp  asset.h  loader.cpp  loader.h
src/engine/assets/mesh/: mesh.cpp  mesh.h
src/engine/cameras/: camera.cpp  camera.h
src/engine/core/: factory.h  types.h
src/engine/core/camera/: camera.cpp  camera.h
src/engine/core/input/: input.cpp  input.h
src/engine/core/math/: vector.h
src/engine/core/math/geometry/: cube.h  plane.h  sphere.h
src/engine/core/scene/: scene.cpp  scene.h
src/engine/core/scene/entity/prefabs/: spheres.cpp  static.cpp
src/engine/core/storage/: record.h  state.h  storage.h
src/engine/core/storage/lifetime/: buffer.h  pool.h  target.cpp  target.h
src/engine/core/storage/lifetime/buffers/: ring.h  single.h
src/engine/core/storage/maps/: slot.cpp  slot.h
src/engine/core/storage/policies/: cache.h  pool.h
src/engine/core/storage/wrappers/: target.h
src/engine/editor/: editor.cpp  editor.h  scene_graph.cpp  scene_graph.h  theme.h
src/engine/editor/panels/: panel.cpp  panel.h
src/engine/editor/panels/console/: console.cpp  console.h
src/engine/editor/panels/hierarchy/: hierarchy.cpp  hierarchy.h
src/engine/editor/panels/inspector/: inspector.cpp  inspector.h
src/engine/editor/panels/menu/: menu.cpp  menu.h
src/engine/editor/panels/stats/: stats.cpp  stats.h
src/engine/editor/panels/viewport/: viewport.cpp  viewport.h
src/engine/inputs/: input.cpp
src/engine/maths/geometry/: cube.h  plane.h  sphere.h
src/engine/mesh/: mesh.cpp  mesh.h
src/engine/render/: block.h  buffer.cpp  buffer.h  context.h  drawable.h  graph.cpp  graph.h  instance.h  material.h  memory.h  mesh.h  pass.h  pipeline.cpp  pipeline.h  render.cpp  render.h  shader.cpp  shader.h
src/engine/render/buffers/: buffer.cpp  buffer.h
src/engine/render/frame/: frame.cpp  frame.h
src/engine/render/graph/: graph.cpp  graph.h
src/engine/render/pass/: pass.cpp  pass.h
src/engine/render/pipelines/: pipeline.cpp  pipeline.h
src/engine/render/pipelines/sdl/: factory.cpp  factory.h
src/engine/render/resources/: resources.cpp  resources.h
src/engine/render/resources/targets/: target.cpp  target.h
src/engine/render/shaders/: shader.cpp  shader.h
src/engine/render/targets/: target.cpp  target.h
src/engine/render/textures/: registry.h  texture.h
src/engine/render/textures/sdl/: factory.cpp  factory.h  target.h
src/engine/render/textures/sdl/factory/: factory.cpp  (+1 more)
src/engine/resources/storage/: storage.h
src/engine/resources/storage/maps/: slot.h
src/engine/runtime/: clock.h  runtime.cpp  runtime.h
src/engine/runtime/schedule/: schedule.cpp  schedule.h
src/engine/runtime/tasks/: tasks.cpp
src/engine/scene/: scene.cpp  scene.h
src/engine/scene/entity/: entity.cpp  entity.h
src/engine/scene/entity/components/: component.h
src/engine/scene/entity/demos/: wave.cpp  wave.h
src/engine/scene/entity/prefabs/: spheres.cpp  spheres.h  static.cpp  static.h
src/engine/scene/object/: object.cpp  object.h
src/engine/scene/object/demos/: instancing.cpp  instancing.h  wave.cpp  wave.h
src/engine/simulation/: simulation.cpp  simulation.h
src/engine/simulation/demos/: instancing.cpp  instancing.h  wave.cpp  wave.h
src/engine/simulation/schedule/: schedule.h
src/engine/simulation/tasks/: tasks.h
src/engine/tasks/: schedule.cpp  schedule.h  tasks.cpp  tasks.h
src/game/: entity.h  game.cpp  game.h  player.cpp  player.h  update.cpp  update.h
src/game/core/: cubes.h
src/game/core/agents/: agent.h  agent_types.cpp
src/game/core/items/: items.cpp  recipes.cpp
src/game/core/world/: world_generator.cpp  world_geometry.cpp
src/render/: asset.cpp  asset.h  buffer.cpp  buffer.h  camera.cpp  camera.h  drawable.h  graph.cpp  graph.h  material.h  mesh.h  pipeline.cpp  pipeline.h  render.cpp  render.h  shader.cpp  shader.h  utils.h
src/simulation/: game.cpp  game.h  simulation.cpp  simulation.h
tests/: CMakeLists.txt  test_assets.cpp  test_cameras.cpp  test_main.cpp  test_tasks.cpp
tests/engine/: test_assets.cpp  test_cameras.cpp  test_main.cpp  test_tasks.cpp
tests/engine/core/storage/: test_dense_slot_map.cpp  test_state.cpp
tests/engine/core/storage/policies/: fixtures.h  test_cache.cpp  test_pool.cpp
tests/engine/render/: test_block.cpp  test_buffer.cpp  test_graph.cpp  test_material.cpp  test_mesh.cpp  test_pass.cpp  test_pipelines.cpp
tests/engine/resources/storage/: test_dense_slot_map.cpp
tests/engine/scene/: test_entity.cpp  test_scene.cpp
(+4 files in other folders)
